# debtds_playwright

./: .env.example  .gitignore  .rooignore  CONTRIBUTING.md  README.md  find_inn_by_orgn.py  hello.py  list_org.py  main.py  my_test_script.py  pyproject.toml  selenium.py
meta/: Architecture.md  Decisions.md  Open-Questions-TODOs.md  Stack.md
src/: apicloud.py  browser.py  config.py  flows.py  locators.py  nalog_ru.py  pdf_extractor.py  proxy_manager.py  rdl_batch.py  runner.py  utils.py
src/ZChB/: config.py  court_debts.py  flows.py  handle_captcha.py  locators.py  login.py  main.py  runner.py  utils.py
src/debt_verifier/: all_stages.py  stage_3_case_analysis.py  stage_structural__finances_analysis.py  stage_structural_analysis_bankruptcy_risks.py
src/listorg/: flows.py  list_org.py  main.py  utils.py
src/tbankrot/: ai_request.py  api_client.py  check_inn_orgn_mismatch.py  clean_exported_xlsx.py  companium_company_status.py  config.py  enrich_lot_details.py  fetch_finances_batch.py  filter_oksana.py  filter_oksana_status_utils.py  filter_sergey.py  filterout_lot_details_sergey.py  main.py  parse_lot_data.py  parse_lot_data_batch.py  parse_lots_links.py
src/tbankrot/tests/: ai_requests.py
